analyzer/tests/snapshots/errors__case_56.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---
error: literal out of range for `u128`
  ┌─ tests/fixtures/errors/numeric_capacity_mismatch/u128_pos.fe:3:21
  │
3 │         return u128(340282366920938463463374607431768211456)
  │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `u128`


